dgv de productos y conexion con base

--- a/AppResto/AppResto.csproj
+++ b/AppResto/AppResto.csproj
@@ -74,6 +74,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dominio\Productos.cs" />
     <Compile Include="Inicio.aspx.cs">
       <DependentUpon>Inicio.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -81,7 +82,8 @@
     <Compile Include="Inicio.aspx.designer.cs">
       <DependentUpon>Inicio.aspx</DependentUpon>
     </Compile>
-    <Compile Include="modelos\AccesoDatos.cs" />
+    <Compile Include="Negocio\AccesoDatos.cs" />
+    <Compile Include="Negocio\ProductoNegocio.cs" />
     <Compile Include="Productos.aspx.cs">
       <DependentUpon>Productos.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
