--- a/AppResto/AppResto.csproj
+++ b/AppResto/AppResto.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Estilos.css" />
+    <Content Include="FormularioProducto.aspx" />
     <Content Include="Inicio.aspx" />
     <Content Include="Java\Java.js" />
     <Content Include="Productos.aspx" />
@@ -75,6 +76,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormularioProducto.aspx.cs">
+      <DependentUpon>FormularioProducto.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FormularioProducto.aspx.designer.cs">
+      <DependentUpon>FormularioProducto.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Inicio.aspx.cs">
       <DependentUpon>Inicio.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -137,12 +145,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Dominio\Dominio.csproj">
-      <Project>{381b5647-4468-4e04-b974-210fb31ad200}</Project>
+    <ProjectReference Include="..\D\Dominio.csproj">
+      <Project>{9f52e317-c3b9-4378-8041-f3d6bfcef64e}</Project>
       <Name>Dominio</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Negocio\Negocio.csproj">
-      <Project>{0ef90d0a-cc00-46d0-9239-75418e88064d}</Project>
+    <ProjectReference Include="..\Neg\Negocio.csproj">
+      <Project>{ab1fb108-813f-4601-be27-a9a1b79681ab}</Project>
       <Name>Negocio</Name>
     </ProjectReference>
   </ItemGroup>
